bk_ida/gccida/g1/find_reloads_address_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5627:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5632:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5674:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code insn_code; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5676:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v52; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5679:4: error: expected ';' after expression
rtx memloc; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5679:5: error: use of undeclared identifier 'memloc'; did you mean 'malloc'?
rtx memloc; // rbx 
    ^~~~~~
    malloc
/usr/include/malloc.h:38:14: note: 'malloc' declared here
extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5680:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v56; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5684:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5685:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v61; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5688:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v64; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5698:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v74; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5699:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v75; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5703:4: error: expected ';' after expression
rtx equiva; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5703:5: error: use of undeclared identifier 'equiva'
rtx equiva; // [rsp+10h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5704:4: error: expected ';' after expression
rtx op0; // [rsp+18h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5704:5: error: use of undeclared identifier 'op0'
rtx op0; // [rsp+18h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5705:4: error: expected ';' after expression
rtx op1; // [rsp+20h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5705:5: error: use of undeclared identifier 'op1'
rtx op1; // [rsp+20h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/reload.c:5707:4: error: expected ';' after expression
rtx xa; // [rsp+28h] [rbp-50h] BYREF 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address_1/src/obj/reload.o] Error 1
